# airoleplay

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  app.py  main.py  pyproject.toml  railway.json  requirements.txt
.claude/: settings.local.json
airoleplay/: __init__.py  cfr2025.md
airoleplay/agents/: __init__.py  enhanced_roleplay_agent.py  roleplay_agent.py
airoleplay/call_analysis/: __init__.py  audio_processor.py  call_analyzer.py
airoleplay/characters/: __init__.py  base.py  persona_character.py
airoleplay/data/: magic_phrases.json  techniques.json
airoleplay/personas/: first_time_buyer.json  investor.json  seller.json
airoleplay/scoring/: __init__.py  conversation_scorer.py
