[project]
name = "airoleplay"
version = "0.1.0"
description = "AI-powered roleplay character system using LangChain and Claude"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",  # For Whisper transcription
    "streamlit>=1.28.0",  # Web UI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["airoleplay"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
